# phenics

./: Cargo.toml  README.md
docker/: Dockerfile  gclouddock.sh  testshell.sh
src/: check.rs  config.rs  download.rs  error.rs  gc_auth.rs  gcs.rs  hash_key.rs  http.rs  lib.rs  locus.rs  main.rs  merge.rs  phenotype.rs  read.rs  records.rs  region.rs  region_iter.rs  render.rs  sample.rs  sim.rs  stats.rs  tabix.rs  vcf.rs
src/phenotype/: load.rs  parse.rs  pheno_sim.rs
src/phenotype/parse/: analyze.rs  tokenize.rs  treeize.rs
src/render/: pheno_result.rs  sample_result.rs
src/sim/: allele_sim.rs  genotype_sim.rs  io.rs  sample_sim.rs  write.rs
src/stats/: genotype_stats.rs  sample_stats.rs
wdl/: inputs_phenics.json  phenics.wdl
