[package]
name = "phenics"
description = "Phenotype simulator"
version = "0.1.2"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/broadinstitute/phenics"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.7.0"
clap = { version = "3.1.8", features = ["cargo"] }
noodles = { version = "0.22.0", features = ["bgzf", "vcf"] }
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3.21"