[package]
name = "phenics"
description = "Phenotype simulator"
version = "0.2.20"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/broadinstitute/phenics"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.7.0"
clap = { version = "3.1.8", features = ["cargo"] }
noodles = { version = "0.22.0", features = ["bgzf", "vcf", "tabix", "csi", "core"] }
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3.21"
futures-core = "0.3.21"
bytes = "1.1.0"
google-cloud-auth = "0.2.0"
openssl = "0.10.40"
